1.74.0/libs/uuid/test/compile-fail/CVS/Entries.Extra
/basic_random_generator_no_copy_assign.cpp////*////
/basic_random_generator_no_copy_ctor.cpp////*////
/random_generator_no_copy_assign.cpp////*////
/random_generator_no_copy_ctor.cpp////*////
